[project]
name = "abcd_rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gym==0.25.2",
    "gymnasium[box2d]>=1.2.3",
    "keras-rl2>=1.0.5",
    "numpy>=2.2.6",
    "setuptools>=82.0.0",
    "shimmy[gym-v21]>=2.0.0",
    "stable-baselines3>=2.7.1",
    "swig>=4.4.1",
    "tensorboard>=2.20.0",
    "tensorflow>=2.20.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]
